# Parslet

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHALLENGE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  architecture.html  battery_mode.html  benchmark_results.html  challenge.html  cli.html  compatibility.html  contributing.html  examples.html  exporting.html  genindex.html  index.html  install.html  introduction.html  main.js  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  robots.txt  run_all_examples.py  search.html  searchindex.js  security.html  setup.cfg  sitemap.xml  style.css  tasks.html  termux-setup.sh  testing.html  usage.html  use_cases.html
.doctrees/: architecture.doctree  battery_mode.doctree  benchmark_results.doctree  cli.doctree  compatibility.doctree  contributing.doctree  environment.pickle  exporting.doctree  index.doctree  install.doctree  introduction.doctree  tasks.doctree  testing.doctree  usage.doctree  use_cases.doctree
Hackathon/: README.md  battery_aware_demo.py  project_report.md
_sources/: architecture.rst.txt  challenge.rst.txt  compatibility.rst.txt  index.rst.txt  introduction.md.txt  usage.rst.txt
docs/: architecture.md  caching.md  comparison.md  compatibility.md  contributing.md  error_handling.md  examples.md  examples.rst  getting_started.md  hybrid_orchestration.md  install.rst  project_report.md  requirements.txt  technical-overview.md  usage.md
examples/: edge_mcu_sensor_processing.py  hello.py  image_filter.py  mobile_edge_inference.py  multi_ai_diagnosis.py  rad_pipeline.py  text_cleaner.py  utils.py
parslet/: __init__.py  cli.py  main_cli.py
parslet.egg-info/: PKG-INFO
scripts/: update_changelog.py
termux/: helpers.py  setup.sh
tests/: conftest.py  test_cli.py  test_cli_convert.py  test_cli_rad.py  test_dask_adapter_module.py  test_hybrid.py  (+6 more)
(+43 files in other folders)
