[metadata]
name = parslet
version = 0.5.0

[options]
packages = find:
python_requires = >=3.11
install_requires =
    networkx
    pillow
    psutil
    pydot
    rich

[options.extras_require]
dev =
    flake8
    pytest
    black

[options.packages.find]
exclude =
    termux
    use_cases
    tests

[options.entry_points]
console_scripts =
    parslet = parslet.main_cli:main

[flake8]
max-line-length = 88
ignore = E501,W503,E226,E203
exclude = __pycache__,.git,.pytest_cache,build,dist
